--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     </tbody>
   </table>
 
-  <script src="script.js"></script>
-</body>
-</html>
+<script>
+  window.BACKEND_URL = "http://a5df645cbfc89471583c68d818ef816c-1044778620.us-east-1.elb.amazonaws.com";
+</script>
+<script src="/script.js"></script>
