Actualización de códigos

--- a/index.html
+++ b/index.html
@@ -71,7 +71,12 @@
     </tbody>
   </table>
 
+  <!-- BASE URL del backend (API Gateway) -->
 <script>
-  window.BACKEND_URL = "http://a5df645cbfc89471583c68d818ef816c-1044778620.us-east-1.elb.amazonaws.com";
+  // Incluimos el stage /prod y el prefijo /api
+  window.BACKEND_URL = "https://0b89aaazrl.execute-api.us-east-1.amazonaws.com/prod/api";
 </script>
+
 <script src="/script.js"></script>
+</body>
+</html>
